FIX 113416 Datetime-picker sub-input missing vertical-align

--- a/skins/default/form.scss
+++ b/skins/default/form.scss
@@ -221,6 +221,7 @@ fieldset {
 
 						input.dtp--date {
 							margin-top: -2px;
+							vertical-align: top;
 						}
 
 						> input:not([type=file]),
